styles.css
/*----- Configuraciones iniciales ---- */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

main {
    min-height: calc(100vh - 120px);
}

body {
    margin: 0;
    padding: 0;
    font-family: 'Roboto', sans-serif;
    line-height: 1.6;
    color: #333;
    background-color: #fefefe;
}

footer {
    margin-top: auto;
    background-color: #EDEDED70;
    color: #000;
    text-align: center;
    padding: 2rem 0;
    margin-top: 36px;
    margin-bottom: 0;
}

/* --- Diseño del Header Nav --- */

header {
    top: 0;
    left: 0;
    width: 100%;
    height: 100px;
    background-color: #fefefe;
    backdrop-filter: blur(6px);
    box-shadow: 0 4px 14px rgba(0, 0, 0, 0.8);
    display: flex;
    align-items: center;
    justify-content: right;
    z-index: 2;
}

.nav-container {
    display: flex;
    align-items: center;
    gap: 24px;
    margin-right: 30px;
}

.logo {
    position: absolute;
    left: 50px;
    top: 50%;
    transform: translateY(-50%);
}

.logo img {
    height: 80px;
    width: auto;
    display: block;
}

.nav-menu {
    display: flex;
    list-style: none;
    gap: 2rem;
}

.hero-contact,
.nav-menu a {
    color: #eee;
    background-color: #04579C;
    text-decoration: none;
    padding: 8px 19px;
    border-radius: 20px;
    transition: background-color 0.3s ease;
    font-size: 24px;
}

.hero-contact:hover,
.nav-menu a:hover,
.nav-menu a.active {
    background-color: #FBB800;
}

.hero-contact a {
    margin-top: 42px;
    text-decoration: none;
    color: #eee;
}

.nav-menu .inicio_button a {
    background: none;
    color: #033259;
    padding: 0;
    border-radius: 0;
}

.nav-menu .inicio_button a:hover {
    background: none;
    color: #3498db;
}

.icon-contact {
    width: 20px;
    height: 20px;
    margin-right: 8px;
    vertical-align: middle;
}

/* --- FIN - Diseño del Header Nav --- */

/* --- Diseño Hero de bienvenida --- */

.hero {
    display: flex;
    flex-direction: column;
    background-color: #EDEDED70;
    text-align: center;
    height: 100%;
    justify-content: center;
    align-items: center;
    padding-bottom: 24px;
}


.welcome-container {
    max-width: 1000px;
    width: 100%;
    margin-top: 55px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 55px;
    z-index: 1;
    box-sizing: border-box;
    display: flex;
    justify-content: center;
    flex-direction: column;

}

h1,
h2 {
    margin: 0;
    padding: 0;
}

.hero h1 {
    font-size: 96px;
    font-family: 'Geist';
    font-weight: 500;
    color: #033259;
    line-height: 1;
}

.hero h2 {
    font-size: 96px;
    font-family: 'Geist';
    font-weight: 800;
    color: #033259;
    line-height: 1;
}

@media (max-width: 1080px) {

    .hero h1 {
        font-size: 66px;
    }

    .hero h2 {
        font-size: 62px;
    }
}

/* --- FIN - Diseño Hero de bienvenida --- */

/* --- Diseño Features --- */
.star-logo img {
    max-width: 133px;
    max-height: 112px;
    margin: 0;
}

.features {
    text-align: center;
    width: 100%;
    background-color: #fefefe;
    padding-top: 12px;
    text-align: center;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.container-features,
.container-features_bottom {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 12px;
    text-align: center;
    width: 100%;
}

.title-features_bottom {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    background: #0079DE08;
    width: 100%;
    text-align: center;
}

.title-features_bottom p {

    max-width: 1023px;
}


.title-features {
    display: flex;
    flex-direction: column;
    justify-content: center;
    line-height: 1;
    max-width: 1023px;
    width: 100%;
    margin-bottom: 40px;
}

.title-features h2,
p,
.title-features_bottom h2,
p {
    margin: 0;
    padding: 0;
}

.title-features h2,
.title-features_bottom h2 {
    text-align: center;
    font-size: 50px;
    color: #033259;
    text-shadow: 0 3px 4px #00000025;
}

.title-features p,
.title-features_bottom p {
    text-align: center;
    font-size: 28px;
    color: #7a8894;
}

.title-features_bottom p {
    margin-bottom: 24px;
}

.features-grid {
    display: grid;
    grid-template-columns: repeat(4, 1fr);
    gap: 51px;
    margin: 36px auto 36px auto;
    max-width: 1200px;
    transform-origin: top center;
}

.feature-item {
    flex: 1 1 250px;
    max-width: 254px;
    /* ancho máximo */
    min-height: 219px;
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 20px;
    background: #eaf2fb;
    border-radius: 16px;
    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
}

.feature-item:hover {
    transform: translateY(-5px);
}

.feature-item h3 {
    margin: 0 auto 12px auto;
    font-size: 18px;
    line-height: 1;
    font-weight: 800;

}

.feature-item p {
    flex-grow: 1;
    overflow: hidden;
    text-overflow: ellipsis;
    line-height: 1.4;
    font-size: 16px;
}

.feature-item img {
    max-width: 44px;
    max-height: 44px;
}

.icon-wrapper {
    width: 44px;
    height: 44px;
    border-radius: 36px;
    background-color: #fff;
    display: flex;
    align-items: center;
    justify-content: center;
    margin: 0 auto 8px;
    padding: 12px;
}

.button-wrapper {
    text-align: center;
    margin-top: 2rem;
}


.contact-button {
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 8px;
    color: #eee;
    background-color: #04579C;
    text-decoration: none;
    padding: 8px 24px;
    border-radius: 20px;
    transition: background-color 0.3s ease;
    font-size: 24px;
    margin-bottom: 36px;
}

.contact-button img {
    max-width: 44px;
    max-height: 44px;

}

.contact-button:hover {
    background-color: #FBB800;
}
/* ... */

